# zai-codex-helper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  gsd-file-manifest.json  gsd-install-state.json
.claude/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-assumptions-analyzer.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-doc-synthesizer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-security-auditor.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/: gsd-add-tests.md  gsd-ai-integration-phase.md  gsd-audit-fix.md  gsd-audit-milestone.md  gsd-audit-uat.md  gsd-autonomous.md  gsd-capture.md  gsd-cleanup.md  gsd-code-review.md  gsd-complete-milestone.md  gsd-config.md  gsd-debug.md  gsd-discuss-phase.md  gsd-docs-update.md  gsd-eval-review.md  gsd-execute-phase.md  gsd-explore.md  gsd-extract-learnings.md  gsd-fast.md  gsd-forensics.md  gsd-graphify.md  gsd-health.md  gsd-help.md  gsd-import.md  gsd-inbox.md  gsd-ingest-docs.md  gsd-manager.md  gsd-map-codebase.md  gsd-milestone-summary.md  gsd-mvp-phase.md  gsd-new-milestone.md  gsd-new-project.md  gsd-pause-work.md  gsd-phase.md  gsd-plan-phase.md  gsd-plan-review-convergence.md  gsd-pr-branch.md  gsd-quick.md  (+21 more)
.codex/: config.toml  gsd-file-manifest.json  gsd-install-state.json  hooks.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
scripts/: pre-commit-secret-scan.sh
tests/: conftest.py  test_agents.py  test_aliases.py  test_api_key.py  test_atomic_write.py  test_backup_coordinator.py  test_child_env.py  test_ci_workflow.py  test_cli_help.py  test_config_backend_abc.py  test_deps.py  test_doctor.py  test_dry_run_diff.py  test_e2e_live.py  test_error_contract.py  test_glm_script.py  test_home_isolation.py  test_install_macro.py  test_json_backend.py  test_markers.py  test_models_cache.py  test_moonbridge.py  test_no_hardcoded_secrets.py  test_paths.py  test_plist_backend.py  test_provider_apply.py  test_providers.py  test_restore.py  test_service_lifecycle.py  test_setup.py  test_shell_backend.py  test_smoke_install.py  test_status.py  test_toml_backend.py  test_tui.py  test_use_zai_use_openai.py  test_yaml_backend.py  test_zshrc.py
(+428 files in other folders)
